<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Easy Food</string>
    <string name="logo_img_description">Easy Food logo</string>
    <string name="login">LOGIN</string>
    <string name="log_in">LOG IN</string>
    <string name="signup">REGISTRAZIONE</string>
    <string name="sign_up">REGISTRATI</string>
    <string name="cancel">ANNULLA</string>
    <!-- Error messages -->
    <string name="error_password">È necessario inserire una password contenente almeno 8 caratteri</string>
    <string name="missing_network">È necessario attivare la connessione ad internet</string>
    <!-- User information -->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="name">nome</string>
    <string name="surname">cognome</string>
    <string name="email">email</string>
</resources>
