<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/dialog_layout"
             android:layout_width="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <AutoCompleteTextView
                android:id="@+id/txt_signup_name"
                style="@style/edit_text_view"
                android:hint="@string/name"/>
        <AutoCompleteTextView
                android:id="@+id/txt_signup_last_name"
                style="@style/edit_text_view"
                android:hint="@string/last_name"/>
        <AutoCompleteTextView
                android:id="@+id/txt_signup_username"
                style="@style/edit_text_view"
                android:hint="@string/username"/>
        <AutoCompleteTextView
                android:id="@+id/txt_signup_password"
                style="@style/edit_text_view.password"
                android:password="true"/>
        <AutoCompleteTextView
                android:id="@+id/txt_signup_repeat_password"
                style="@style/edit_text_view.password"
                android:password="true"/>
        <AutoCompleteTextView
                android:id="@+id/txt_signup_email"
                style="@style/edit_text_view"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/btn_signup_dialog_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"/>
            <Button
                    android:id="@+id/btn_signup_dialog_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>